--- a/Du_An_Android/app/src/main/AndroidManifest.xml
+++ b/Du_An_Android/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Du_An_Android">
+
         <activity
             android:name=".ScoreboardActivity"
             android:exported="false" />
@@ -20,12 +21,20 @@
         <activity
             android:name=".QuizActivity"
             android:exported="false" />
+
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="false" />
+
         <activity
             android:name=".MainActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
